--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.11",
     "vue": "^2.6.10"
   },
   "devDependencies": {
