--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.5",
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "serve-static": "^1.13.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
